[package]
name = "coupon_rs"
version = "0.1.0"
description = "Coupon PRICE and YIELD function in Rust"
repository = "https://github.com/DanangSeptiadi/coupon_rs"
keywords = ["coupon","bond","coupon-yield"]
categories = ["finance"]
authors = ["DanangSeptiadi"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
chronoutil = "0.2.0"