[package]
name = "coupon_rs"
version = "0.1.0"
description = "Coupon PRICE and YIELD function in Rust"
homepage = "https://github.com/DanangSeptiadi/coupon_rs"
repository = "https://github.com/DanangSeptiadi/coupon_rs"
keywords = ["coupon","bond","coupon-yield"]
categories = ["finance"]
authors = ["DanangSeptiadi"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
    "src/*", "Cargo.toml", "LICENSE", "README.md" 
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
chronoutil = "0.2.0"